syntax = "proto2";

option java_package = "org.yamcs.cmdhistory.protobuf";

import "yamcs/protobuf/yamcs.proto";

message AssignmentInfo {
  repeated Assignment assignment = 1;
}

message Assignment {
  optional string name = 1;
  optional yamcs.protobuf.Value value = 2;
  optional bool userInput = 3;
}
